tests/testdata/compileerror/hw.scala
object Hi {
  def main(args: Array[String]) = 123println("Hi!")
}